--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1013,9 +1013,31 @@ As seen in the results to the stage 1 evaluation, there is also a correlation in
 
 \subsubsection{Use of Intermediary Opacities}
 
-Participant 9, both 1-3 \& 1-4
+Confirming responses during the post task interviews, several participants did make use of the analogue selectable transition (transition 3, accessed via the right trigger \texttt{[RT]}) to view both RW \& VR environments together. Figures \ref{10-1-4_opacity.png} \& \ref{12-1-4_opacity.png} show, for participants 10 \& 12 undertaking scenario 1-4, the opacity of the objects upon which the camera feeds were rendered: an opacity of 1.0 means that the camera feed was completely opaque \& the participant was thus perceiving 100\% RW visual stimuli, while an opacity of 0 means that the camera feed was invisible \& the participant was perceiving 100\% VR visual stimuli. As well as using the analogue selectable transition to view both environments at once, there are incidents where it seems that the participant used the analogue selectable opacity not strictly to view both environments at once, but to control the speed at which a transition from RW to VR was performed. We can see that participant 10 (figure \ref{10-1-4_opacity.png}) uses transition 3 at around 250 seconds to perform a transition to a 100\% VR view, but at a slower rate than the linear interpolated transition such as can be seen just before at around 245 seconds. This greater level of control in how quickly transitions were performed was raised in interviews as a reason why this particular transition was favoured by some participants.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/10-1-4_opacity.png}
+	\caption{Opacity of camera objects against time for participant 10 in scenario 1-4, showing RW/VR transitions.}
+	\label{10-1-4_opacity.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/12-1-4_opacity.png}
+	\caption{Opacity of camera objects against time for participant 12 in scenario 1-4, showing RW/VR transitions.}
+	\label{12-1-4_opacity.png}
+	\end{center}
+\end{figure}
 
 %=====================
+
+
+
+
+
+
 
 Time spent in virtual
 	participant 8 - more time spent in VR in 1-4 to avoid the automatic switch
@@ -1023,12 +1045,6 @@ Time spent in virtual
 	
 Other
 	participant 12 - all big head movements in 1-4 were in VR, but in 1-3 there was RW head movement too?
-
-
-
-
-
-
 
 
 Number of transitions in each session ranged from high teens to low sixties.
@@ -1039,11 +1055,6 @@ four of seven participants spent more time in real than virtual in both 1-3 \& 1
 	for three participants the ratio was closer in 1-4 than in 1-3
 	one spent more time in virtual than real in both 1-3 \& 1-4
 	one spent more time in real in 1-3 \& then more time in virtual tin 1-4 (familiarity?)
-	
-`Trying out', clearly visible in participant
-
-***plots showing opacity of some participants actually using the trigger not all the way down
-
 
 %=========================================================================================================
 
@@ -1053,161 +1064,6 @@ four of seven participants spent more time in real than virtual in both 1-3 \& 1
 %=========================================================================================================
 
 
-
-
-
-
-
-
-
-
-
-
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 7}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/7_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 8}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/8_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/8_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 9}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/9_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/9_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 10}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/10_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/10_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 11}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/11_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/11_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 12}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/12_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/12_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 13}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/13_1-3_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.1/13_1-4_3up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
 
 %=========================================================================================================
 
